# notetaker

./: .gitignore  .importlinter  .pre-commit-config.yaml  AGENTS.md  README.md  Taskfile.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: architecture-guardrails.md  architecture.md  configuration.md  development.md  install-desktop.md  roadmap.md  system-audio-capture.md  test-fixtures.md
docs/adr/: 0001-finalize-survival.md  0001-live-tab-diarization-and-editing.md
docs/spikes/: 2026-07-11-f11-apple-silicon-asr.md
docs/spikes/f11/: bench_asr_baseline.py  bench_asr_mlx.py  bench_diarize_mps.py  compare_overlap_assignment.py
docs/spikes/f11/results/: baseline_120_align.json  baseline_600.json  diarize_120.json  diarize_600.json  mlx_120.json  mlx_600.json  overlap_120.json
live_meeting_transcriber/application/: cleanup_service.py  container.py  diarization_batch.py  dual_export.py  dual_path.py  export_markdown.py  export_overwrite.py  finalize_service.py  live_capture.py  path_sanitize.py  recorder.py  screenshot_export.py  session_media.py  session_search.py  session_service.py  silence.py  slide_preview_service.py  slide_review.py  video_import_service.py  video_session_storage.py
live_meeting_transcriber/audio/: __init__.py  avfoundation_devices.py  backend.py  capture.py  chunking.py  coreaudio_tap.py  devices.py  media_import.py  media_source.py  platform.py  session_recording.py  sources.py  stereo.py  timeline.py  wav_level.py  wav_ops.py  wav_segment.py
live_meeting_transcriber/cli/: deps.py  main.py
live_meeting_transcriber/cli/commands/: __init__.py  cleanup.py  devices.py  finalize.py  paths.py  recording.py  sessions.py  video.py
live_meeting_transcriber/config/: device_prefs.py  paths.py  settings.py
live_meeting_transcriber/config/sections/: __init__.py  audio.py  diarization.py  logging.py  obsidian.py  offline.py  providers.py  storage.py  video.py
live_meeting_transcriber/diagnostics/: diarization_doctor.py  screen_capture_doctor.py
live_meeting_transcriber/diarization/: __init__.py  base.py  labels.py  merge_service.py  noop.py  pyannote_provider.py  wav_input.py
live_meeting_transcriber/domain/: application_events.py  events.py  exceptions.py  meeting_naming.py  models.py  ports.py  session_audio.py  speaker_display.py  speaker_overlap.py
live_meeting_transcriber/observability/: __init__.py  logging.py
live_meeting_transcriber/obsidian/: __init__.py  meeting_export.py  people_files.py  vault_patterns.py
live_meeting_transcriber/offline/: __init__.py  mlx_asr.py  whisperx_pipeline.py
live_meeting_transcriber/screencap/: __init__.py  cli.py
live_meeting_transcriber/storage/: __init__.py  people_composite.py  repositories.py  sqlite.py
live_meeting_transcriber/summarization/: __init__.py  openai_summarizer.py  service.py  structured_output.py  unavailable.py
live_meeting_transcriber/transcription/: __init__.py  faster_whisper_transcriber.py  openai_transcriber.py
live_meeting_transcriber/ui/: __init__.py  bridge.py
live_meeting_transcriber/ui/effects/: __init__.py  controller.py
live_meeting_transcriber/ui/state/: __init__.py  actions.py  finalize_stages.py  model.py  reducer.py  selectors.py  store.py
live_meeting_transcriber/ui/tui/: __init__.py  app.py  empty_states.py  footer_bindings.py  help_overlay.py  meeting_actions.py  meeting_browser.py  meeting_detail.py  meeting_modals.py  meeting_session_helpers.py  meeting_toolbar.py  people_suggesters.py  rendering.py  settings_edit.py  settings_view.py  slide_preview_helpers.py  slide_preview_screen.py  status_deck.py  tab_complete_input.py  theme.py  transcript_display.py  video_import_modal.py
live_meeting_transcriber/utils/: std_streams.py  time.py
live_meeting_transcriber/video/: __init__.py  slide_common.py  slide_detection.py  tools.py
live_meeting_transcriber/video/strategies/: __init__.py  factory.py  ffmpeg_scene.py  frame_diff.py
native/macos/: Info.plist  README.md  systemaudiotap.swift
packaging/: install-desktop.sh  install-macos.sh
packaging/desktop/: live-meeting-transcriber.desktop
scripts/: download_sample_video.sh  fetch_test_fixtures.sh  generate_sample_video.py  install_video_prereqs.sh
tests/: conftest.py
tests/architecture/: test_import_contracts.py
tests/e2e/: cli_helpers.py  conftest.py  test_cli_cleanup_and_slides_smoke.py  test_cli_finalize_pending_smoke.py  test_cli_finalize_smoke.py  test_cli_record_dual_path_warning.py  test_cli_record_smoke.py  test_cli_sessions_smoke.py  test_cli_transcribe_video_smoke.py  video_helpers.py
tests/fixtures/: README.md  paths.py
tests/integration/: test_video_import_download.py
tests/unit/: conftest.py  test_audio_backend.py  test_audio_capture.py  test_audio_platform.py  test_audio_sources.py  test_audio_sources_screen.py  test_avfoundation_capture.py  test_avfoundation_devices.py  test_cleanup_service.py  test_cli_default.py  test_cli_devices.py  test_cli_doctor.py  test_cli_paths.py  test_cli_provider_error.py  test_cli_record.py  test_cli_sessions_search.py  test_configuration_docs.py  test_coreaudio_tap.py  test_device_prefs.py  test_diarization_doctor.py  test_diarization_labels.py  test_diarization_merge.py  test_diarization_provider_selection.py  test_diarization_settings.py  test_diarization_wav_input.py  test_diarize_mps_fallback.py  test_dual_path.py  test_export_markdown.py  test_export_overwrite.py  test_faster_whisper_transcriber.py  test_finalize_as_utc.py  test_finalize_fds_guard.py  test_finalize_feedback.py  test_finalize_jobs_panel.py  test_finalize_recovery.py  test_finalize_unrecoverable_marker.py  test_first_run_empty_states.py  test_footer_bindings.py  test_header_title.py  test_help_overlay.py  (+91 more)
