[project]
name = "live-meeting-transcriber"
version = "0.1.0"
description = "Local background transcription for browser/Teams meetings on Ubuntu Linux."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Your Name" }]
keywords = ["transcription", "meetings", "pipewire", "pulseaudio", "openai"]

dependencies = [
  "pydantic>=2.7",
  "pydantic-settings[yaml]>=2.2",
  "typer>=0.12",
  "structlog>=24.2",
  "openai>=1.30",
  "httpx>=0.27",
  "textual>=0.58",
  "rich>=13.7",
]

[project.optional-dependencies]
# PyTorch wheels are not available for CPython 3.14+ yet (cp314). Use Python 3.12 or 3.13
# for these extras, e.g. `uv python pin 3.13`.
diarization = [
  "pyannote.audio>=3.1.0; python_full_version < '3.14'",
  "torch>=2.1; python_full_version < '3.14'",
  "torchaudio>=2.1; python_full_version < '3.14'",
]
faster-whisper = [
  "faster-whisper>=1.0.3",
]
whisperx = [
  "whisperx>=3.1.1; python_full_version < '3.14'",
  "torch>=2.1; python_full_version < '3.14'",
  "torchaudio>=2.1; python_full_version < '3.14'",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.10",
  "types-requests>=2.32.0.20240712",
  "types-PyYAML>=6.0.12",
  "pre-commit>=3.7",
  "import-linter>=2.0",
]
tui-image = [
  "textual-image[textual]>=0.9",
]

[project.scripts]
live-transcriber = "live_meeting_transcriber.cli.main:app"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["live_meeting_transcriber"]

# Ship the macOS Core Audio tap helper sources at the wheel root so they resolve at
# `<install-root>/native/macos` — matching the repo-relative path used in dev/editable installs
# (see live_meeting_transcriber/audio/coreaudio_tap.py:_NATIVE_DIR). macOS-only at runtime.
[tool.hatch.build.targets.wheel.force-include]
"native" = "native"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
markers = [
  "integration: integration tests (skipped unless RUN_INTEGRATION_TESTS=1)",
]

[tool.ruff]
line-length = 100
target-version = "py312"
fix = true
src = ["live_meeting_transcriber", "tests"]

[tool.ruff.lint]
select = [
  "E", "F", "W",
  "I",
  "B",
  "UP",
  "SIM",
  "RUF",
]
ignore = [
  "E501", # line length handled by formatter
  "RUF012", # Textual Screen/widget BINDINGS are idiomatic mutable class attrs
  "UP042", # str+Enum used for stable string wire values with Pydantic/tests
  "SIM105", # try/except in cleanup paths is intentional
  "SIM110", # some loops kept for clarity over any()
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
pretty = true
plugins = ["pydantic.mypy"]
exclude = "(^|/)build/|(^|/)dist/|(^|/)references/"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = ["textual.*", "faster_whisper.*", "whisperx.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["live_meeting_transcriber"]

[tool.coverage.report]
show_missing = true
# OQ-1 (operator, 2026-07-10): target 90% overall, approached INCREMENTALLY. Start the
# floor conservatively BELOW the current baseline so it can only ratchet up — raise it as
# T2 lands tests, never lower it. Do NOT jump to 90 here (that reddens CI at once, the
# opposite of "incrementally").
# Baseline: ~73% locally (with ffmpeg, e2e runs) but only ~70.5% in CI's `test` job, which
# has NO ffmpeg so `tests/e2e` skip. 65 leaves headroom under that worst case + matrix
# (3.12/3.13) variance, so the gate flags real regressions rather than false-redding on
# the baseline. Enforced by `task check` and CI's test job (`--cov`).
fail_under = 65
