[project]
name = "live-meeting-transcriber"
version = "0.1.0"
description = "Local background transcription for browser/Teams meetings on Ubuntu Linux."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Your Name" }]
keywords = ["transcription", "meetings", "pipewire", "pulseaudio", "openai"]

dependencies = [
  "pydantic>=2.7",
  "pydantic-settings[yaml]>=2.2",
  "typer>=0.12",
  "structlog>=24.2",
  "openai>=1.30",
  "httpx>=0.27",
  "textual>=0.58",
  "rich>=13.7",
]

[project.optional-dependencies]
# PyTorch wheels are not available for CPython 3.14+ yet (cp314). Use Python 3.12 or 3.13
# for these extras, e.g. `uv python pin 3.13`.
diarization = [
  "pyannote.audio>=3.1.0; python_full_version < '3.14'",
  "torch>=2.1; python_full_version < '3.14'",
  "torchaudio>=2.1; python_full_version < '3.14'",
]
faster-whisper = [
  "faster-whisper>=1.0.3",
]
whisperx = [
  "whisperx>=3.1.1; python_full_version < '3.14'",
  "torch>=2.1; python_full_version < '3.14'",
  "torchaudio>=2.1; python_full_version < '3.14'",
]
# Apple-Silicon-only GPU transcription for offline finalize (F12). The environment
# markers make this extra a no-op on every other platform (mlx has no Linux/CUDA wheels),
# mirroring the torch `python_full_version` guard above.
mlx = [
  "mlx-whisper>=0.4.3; platform_system == 'Darwin' and platform_machine == 'arm64' and python_full_version < '3.14'",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.10",
  "types-requests>=2.32.0.20240712",
  "types-PyYAML>=6.0.12",
  "pre-commit>=3.7",
  "import-linter>=2.0",
]
tui-image = [
  "textual-image[textual]>=0.9",
]

[project.scripts]
live-transcriber = "live_meeting_transcriber.cli.main:app"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["live_meeting_transcriber"]

# Ship the macOS Core Audio tap helper sources at the wheel root so they resolve at
# `<install-root>/native/macos` — matching the repo-relative path used in dev/editable installs
# (see live_meeting_transcriber/audio/coreaudio_tap.py:_NATIVE_DIR). macOS-only at runtime.
[tool.hatch.build.targets.wheel.force-include]
"native" = "native"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
markers = [
  "integration: deterministic integration tests; need ffmpeg (skipped if absent), no network. Run via `task test:integration` or `pytest -m integration`.",
]

[tool.ruff]
line-length = 100
target-version = "py312"
fix = true
src = ["live_meeting_transcriber", "tests"]

[tool.ruff.lint]
select = [
  "E", "F", "W",
  "I",
  "B",
  "UP",
  "SIM",
  "RUF",
]
ignore = [
  "E501", # line length handled by formatter
  "RUF012", # Textual Screen/widget BINDINGS are idiomatic mutable class attrs
  "UP042", # str+Enum used for stable string wire values with Pydantic/tests
  "SIM105", # try/except in cleanup paths is intentional
  "SIM110", # some loops kept for clarity over any()
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
pretty = true
plugins = ["pydantic.mypy"]
exclude = "(^|/)build/|(^|/)dist/|(^|/)references/"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = ["textual.*", "faster_whisper.*", "whisperx.*", "mlx_whisper.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["live_meeting_transcriber"]

[tool.coverage.report]
show_missing = true
# OQ-1 (operator, 2026-07-10): target 90% overall, approached INCREMENTALLY. Start the
# floor conservatively BELOW the current baseline so it can only ratchet up — raise it as
# T2 lands tests, never lower it. Do NOT jump to 90 here (that reddens CI at once, the
# opposite of "incrementally").
# Ratchet history: 65 (T1, 2026-07-10, local ~73% / CI ~70.5%) → 68 (T6, 2026-07-11).
# Baseline for 68: CI hermetic worst case measured 72.15% on 2026-07-11 (unit `test` job
# has NO ffmpeg/torch, so tests/e2e + torch-gated tests skip; torch internals ≈2.2%
# documented slack — see T2). Local runs ~81%. 68 sits ~4 pts under the CI worst case
# + matrix (3.12/3.13) variance, so the gate flags real regressions rather than
# false-redding on the baseline. Next rungs stay with T2 (75/80/85/90). Never lower.
# Enforced by `task check` and CI's test job (`--cov`).
fail_under = 68
